--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="container">
-      <video id="video" playsinline></video>
+      <video id="video" playsinline autoplay muted></video>
       <canvas id="canvas"></canvas>
     </div>
     <script src="app.js"></script>
